[gd_scene load_steps=16 format=2]

[ext_resource path="res://demos/resources/Lato-Regular.ttf" type="FontFile" id=1]
[ext_resource path="res://demos/nodes/SequenceCallback.gd" type="Script" id=2]
[ext_resource path="res://demos/resources/check.png" type="Texture2D" id=3]
[ext_resource path="res://demos/components/ShowAllDemos.tscn" type="PackedScene" id=4]

[sub_resource type="FontFile" id=3]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 16.0
content_margin_bottom = 16.0
bg_color = Color( 0.0941176, 0.160784, 0.172549, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 16.0
content_margin_bottom = 16.0
bg_color = Color( 0.258824, 0.376471, 0.403922, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 54.0
content_margin_right = 54.0
content_margin_top = 16.0
content_margin_bottom = 16.0
bg_color = Color( 0.211765, 0.25098, 0.156863, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 16.0
content_margin_bottom = 16.0
bg_color = Color( 0.203922, 0.0980392, 0.227451, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="FontFile" id=6]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=7]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=8]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=11]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 16.0
content_margin_bottom = 16.0
bg_color = Color( 0.592157, 0.788235, 0.639216, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.207843, 0.364706, 0.701961, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 16.0
content_margin_bottom = 16.0
bg_color = Color( 0.45098, 0.666667, 0.501961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0470588, 0.105882, 0.231373, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Node" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ShowAllDemos" parent="." instance=ExtResource( 4 )]
offset_right = 191.0
offset_bottom = 32.0

[node name="SequenceCallback" type="HBoxContainer" parent="."]
offset_top = 40.0
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SequenceCallback"]
offset_top = 163.0
offset_right = 725.0
offset_bottom = 397.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 24

[node name="Button1" type="Button" parent="SequenceCallback/VBoxContainer"]
offset_left = 312.0
offset_right = 412.0
offset_bottom = 62.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Item 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="SequenceCallback/VBoxContainer"]
offset_left = 274.0
offset_top = 86.0
offset_right = 450.0
offset_bottom = 148.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 4 )
text = "Item 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="SequenceCallback/VBoxContainer"]
offset_left = 312.0
offset_top = 172.0
offset_right = 412.0
offset_bottom = 234.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 5 )
text = "Item 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="SequenceCallback"]
offset_left = 733.0
offset_right = 1024.0
offset_bottom = 560.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
custom_constants/offset_right = 0
custom_constants/offset_top = 24
custom_constants/offset_left = 24

[node name="VBoxContainer" type="VBoxContainer" parent="SequenceCallback/MarginContainer"]
offset_left = 24.0
offset_top = 24.0
offset_right = 291.0
offset_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SequenceCallback/MarginContainer/VBoxContainer"]
offset_top = 156.0
offset_right = 267.0
offset_bottom = 186.0

[node name="check1" type="Sprite2D" parent="SequenceCallback/MarginContainer/VBoxContainer/HBoxContainer"]
texture = ExtResource( 3 )
centered = false

[node name="Label1" type="Label" parent="SequenceCallback/MarginContainer/VBoxContainer/HBoxContainer"]
offset_right = 267.0
offset_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
text = "Animation 1"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="SequenceCallback/MarginContainer/VBoxContainer"]
offset_top = 210.0
offset_right = 267.0
offset_bottom = 240.0

[node name="check2" type="Sprite2D" parent="SequenceCallback/MarginContainer/VBoxContainer/HBoxContainer2"]
texture = ExtResource( 3 )
centered = false

[node name="Label2" type="Label" parent="SequenceCallback/MarginContainer/VBoxContainer/HBoxContainer2"]
offset_right = 267.0
offset_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "Animation 2"
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="SequenceCallback/MarginContainer/VBoxContainer"]
offset_top = 264.0
offset_right = 267.0
offset_bottom = 294.0

[node name="check3" type="Sprite2D" parent="SequenceCallback/MarginContainer/VBoxContainer/HBoxContainer3"]
texture = ExtResource( 3 )
centered = false

[node name="Label3" type="Label" parent="SequenceCallback/MarginContainer/VBoxContainer/HBoxContainer3"]
offset_right = 267.0
offset_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 8 )
text = "Animation 3"
align = 1

[node name="Start" type="Button" parent="SequenceCallback/MarginContainer/VBoxContainer"]
offset_left = 34.0
offset_top = 318.0
offset_right = 232.0
offset_bottom = 380.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "Start Animation"

[connection signal="pressed" from="SequenceCallback/MarginContainer/VBoxContainer/Start" to="SequenceCallback" method="_on_Start_pressed"]
